Fix for map covering images,

--- a/client/map.css
+++ b/client/map.css
@@ -1,6 +1,7 @@
 .map {
   background: #eee;
   isolation: isolate;
+  clear: both;
 }
 
 .map figcaption {
